@@ -14,6 +14,8 @@ CHANGES
 - Added add-google-users option --add-to-group as a more meaningful alias for
   the old --admin-group option.
 
+- Added add-google-users option --add-to-group-command for completeness.
+
 
 1.4.0 (2012-10-08)
 ------------------
